fixed vid css on mobile

--- a/index.css
+++ b/index.css
@@ -151,6 +151,7 @@ h2::after {
     height: 2px;
     width: 10rem;
     background: var(--pink);
+
     margin: var(--gutter-small) 0;
 }
 
@@ -171,6 +172,7 @@ h3 {
     h3 {
         font-size: var(--font-size-medium);
     }
+
 }
 
 p {
@@ -504,6 +506,11 @@ body:not(.user-is-tabbing) a:focus {
     margin-bottom: var(--gutter-normal);
 }
 
+.video{
+    width: 95%;
+
+}
+
 @media(min-width: 901px) {
     .project__image-box {
         flex: 1;
@@ -515,6 +522,11 @@ body:not(.user-is-tabbing) a:focus {
     .project__code {
         height: 4rem;
     }
+    .video{
+        width: 84%;
+        height: 40vw;
+    }
+   
 }
 
 /* --------------------------------------- */
